cmake_minimum_required(VERSION 2.6)
project(ProbabilisticModelling)


ADD_DEFINITIONS(-DUNIX)
set(CMAKE_CXX_STANDARD 11)


FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

#SET( BOOST_INCLUDEDIR /usr/local/boost_1_66_0)
#FIND_PACKAGE(boost REQUIRED)
#INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})


add_subdirectory(executables)